fixed text overflow on grid card

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 :root {
   --border-radius: 1rem;
-  --border-color: 1px solid gray;
+  --border: 1px solid rgb(62, 62, 62);
 }
 
 body {
@@ -73,21 +73,29 @@ li {
   font-weight: 400;
   min-width: 0;
   display: grid;
-  grid-template-columns: 15% 2fr 4fr;
+  grid-template-columns: 1fr 3fr 4fr;
 
   border: 1px solid #dcdcdc3a;
   /* box-shadow: rgb(0 0 0 / 20%) 0px 2px 8px 0px; */
   font-size: 0.8rem;
   backdrop-filter: blur(20px);
   background-color: rgba(0, 0, 0, 0.382);
+
+
 }
 
 .card .symbol {
   margin: 0 1rem;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .formatted-number {
   text-overflow: ellipsis;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
   overflow: hidden;
 }
 
@@ -112,14 +120,7 @@ h1 {
   /* box-shadow: rgb(99 99 99 / 40%) 0px 2px 8px 0px; */
 }
 
-.token-card-list {
-  padding: 1rem 0;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 10px;
-  height: 70vh;
-  overflow-y: scroll;
-}
+
 
 .card-grid {}
 
